# CppWinApi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
iface/Utils/: CountOf.h  Flag.h  Flags.h  Mask.h
iface/WinApi/: Common.h  Handle.h  Heap.h
iface/WinApi/IO/: File.h
iface/WinApi/Sync/: Event.h
tests/: CMakeLists.txt  Heap_Tests.cpp
tests/IO/: File_Tests.cpp
tests/Sync/: Event_Tests.cpp
tests/Utils/: CountOf_Tests.cpp  Mask_Tests.cpp
